# cs252project3

./: .shellrc  Cargo.toml  README.md  efile  efile2  err1  if.sh  shell-in  test.sh  testout.txt  while.sh
src/: main.rs  shell.pest
